<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/register_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="@dimen/toolbar_height"
            app:title="@string/register" />
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:id="@+id/register_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="16dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_toolbar">

        <TextView
            style="@style/SmallText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_text_input"
            style="@style/TextInputLayoutRoundedBorder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                style="@style/RegularText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_hint"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/secondary_text" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            style="@style/SmallText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordTextInput"
            style="@style/TextInputLayoutRoundedBorder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/secondary_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                style="@style/RegularText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColorHint="@color/secondary_text" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            style="@style/SmallText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/repeat_password" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/repeatedPasswordTextInput"
            style="@style/TextInputLayoutRoundedBorder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/secondary_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/repeated_password"
                style="@style/RegularText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColorHint="@color/secondary_text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/registerButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginTop="20dp"
            android:text="@string/register" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="@style/ProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_toolbar" />

</androidx.constraintlayout.widget.ConstraintLayout>